Initial Website Content

--- a/index.html
+++ b/index.html
@@ -4,11 +4,92 @@
     <!-- meta tags, links to css, etc. -->
     <meta charset="utf-8">
     <title>DIG 245 On the Grid</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
 
     <!-- visible content goes here -->
     <h1>DIG 245 On the Grid</h1>
 
+    <div class="container">
+        <div class="row"> <!--Row One Swift and Kelce-->
+            <div class="col-6 col-md-4 col-lg-3">
+                <p>
+                    <font size="+2"><b>Lorem ipsum dolor sit amet</b></font>
+                    <br>
+                    Nunc sed augue lacus viverra vitae congue eu. Vitae tempus quam pellentesque 
+                    nec nam aliquam sem et tortor. Vitae turpis massa sed elementum tempus egestas sed. 
+                    Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique senectus.
+                </p>
+            </div>
+            <div class="col-6 col-md-4 col-lg-5">
+                <img src="./assets/img/TaylorSwiftChiefsGame.webp" class="img-fluid" alt="Taylor Swift at KC Chiefs game">
+            </div>
+            <div class="col-6 col-md-4 col-lg-4">
+                <img src="./assets/img/TaylorSwiftxTravisKelce.webp" class="img-fluid" alt="Taylor Swift and Travis Kelce">
+            </div>
+        </div>
+        <br>
+
+        <div class="row"> <!--Row Two Swift Speak Now-->
+            <div class="col-6 col-md-4 col-lg-3">
+                <p>
+                    <font size="+2"><b>Tempus quam pellentesque</b></font>
+                    <br>
+                    Amet mattis vulputate enim nulla aliquet porttitor lacus luctus accumsan. 
+                    Vitae congue eu consequat ac felis donec et. Sapien pellentesque habitant morbi 
+                    tristique senectus et netus et malesuada.
+                </p>
+            </div>
+            <div class="col-6 col-md-4 col-lg-5">
+                <img src="./assets/img/SpeakNowTaylorsVersion.webp" class="img-fluid" alt="Speak Now (Taylor's Version) Vinyl">
+            </div>
+            <div class="col-6 col-md-4 col-lg-4">
+                <img src="./assets/img/SpeakNowBack.jpg" class="img-fluid" alt="Taylor Swift in Speak Now dress">
+            </div>
+        </div>
+        <br>
+
+        <div class="row"> <!--Row Three Lautner-->
+            <div class="col-6 col-md-4 col-lg-3">
+                <p>
+                    <font size="+2"><b>At elementum eu facilisis sed odio</b></font>
+                    <br>
+                    Condimentum id venenatis a condimentum. Viverra maecenas accumsan lacus vel facilisis. 
+                    Pharetra pharetra massa massa ultricies mi quis hendrerit dolor magna. Risus ultricies 
+                    tristique nulla aliquet enim. Vitae auctor eu augue ut lectus arcu bibendum at.
+                </p>
+            </div>
+            <div class="col-6 col-md-4 col-lg-5">
+                <img src="./assets/img/LautnerxSwift.jpg" class="img-fluid" alt="Taylor Swift and Taylor Lautner">
+            </div>
+            <div class="col-6 col-md-4 col-lg-4">
+                <img src="./assets/img/SharkBoy.jpg" class="img-fluid" alt="Taylor Lautner as Shark Boy">
+            </div>
+        </div>
+        <br>
+
+        <div class="row"> <!--Row Four Taylor Series-->
+            <div class="col-6 col-md-4 col-lg-3">
+                <p>
+                    <font size="+2"><b>Vitae semper quis lectus nulla</b></font>
+                    <br>
+                    Nunc sed blandit libero volutpat sed cras ornare arcu dui. Sed viverra ipsum nunc aliquet. 
+                    Pretium vulputate sapien nec sagittis aliquam malesuada bibendum arcu vitae. 
+                    Mauris pellentesque pulvinar pellentesque habitant. 
+                    Donec enim diam vulputate ut pharetra sit amet aliquam.                </p>
+            </div>
+            <div class="col-6 col-md-4 col-lg-5">
+                <img src="./assets/img/TaylorPolynomials.jpg" class="img-fluid" alt="Taylor Polynomials">
+            </div>
+            <div class="col-6 col-md-4 col-lg-4">
+                <img src="./assets/img/TaylorSeries.png" class="img-fluid" alt="Taylor Series">
+            </div>
+        </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
