--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body>
 
     <!-- visible content goes here -->
-    <h1>DIG 245 On the Grid</h1>
+    <h1>The Taylor Times</h1>
+    <hr>
+    <br>
+    <br>
 
     <div class="container">
         <div class="row"> <!--Row One Swift and Kelce-->
