--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="container">
         <div class="row"> <!--Row One Swift and Kelce-->
-            <div class="col-6 col-md-4 col-lg-3">
+            <div class="col-12 col-md-4 col-lg-3">
                 <p>
                     <font size="+2"><b>Lorem ipsum dolor sit amet</b></font>
                     <br>
@@ -34,10 +34,11 @@
                 <img src="./assets/img/TaylorSwiftxTravisKelce.webp" class="img-fluid" alt="Taylor Swift and Travis Kelce">
             </div>
         </div>
+        <hr>
         <br>
 
         <div class="row"> <!--Row Two Swift Speak Now-->
-            <div class="col-6 col-md-4 col-lg-3">
+            <div class="col-12 col-md-4 col-lg-3">
                 <p>
                     <font size="+2"><b>Tempus quam pellentesque</b></font>
                     <br>
@@ -53,10 +54,11 @@
                 <img src="./assets/img/SpeakNowBack.jpg" class="img-fluid" alt="Taylor Swift in Speak Now dress">
             </div>
         </div>
+        <hr>
         <br>
 
         <div class="row"> <!--Row Three Lautner-->
-            <div class="col-6 col-md-4 col-lg-3">
+            <div class="col-12 col-md-4 col-lg-3">
                 <p>
                     <font size="+2"><b>At elementum eu facilisis sed odio</b></font>
                     <br>
@@ -72,17 +74,19 @@
                 <img src="./assets/img/SharkBoy.jpg" class="img-fluid" alt="Taylor Lautner as Shark Boy">
             </div>
         </div>
+        <hr>
         <br>
 
         <div class="row"> <!--Row Four Taylor Series-->
-            <div class="col-6 col-md-4 col-lg-3">
+            <div class="col-12 col-md-4 col-lg-3">
                 <p>
                     <font size="+2"><b>Vitae semper quis lectus nulla</b></font>
                     <br>
                     Nunc sed blandit libero volutpat sed cras ornare arcu dui. Sed viverra ipsum nunc aliquet. 
                     Pretium vulputate sapien nec sagittis aliquam malesuada bibendum arcu vitae. 
                     Mauris pellentesque pulvinar pellentesque habitant. 
-                    Donec enim diam vulputate ut pharetra sit amet aliquam.                </p>
+                    Donec enim diam vulputate ut pharetra sit amet aliquam.                
+                </p>
             </div>
             <div class="col-6 col-md-4 col-lg-5">
                 <img src="./assets/img/TaylorPolynomials.jpg" class="img-fluid" alt="Taylor Polynomials">
@@ -91,8 +95,9 @@
                 <img src="./assets/img/TaylorSeries.png" class="img-fluid" alt="Taylor Series">
             </div>
         </div>
+        <hr>
 
-
+    <script src="./assets/js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
