Changed img and text size at different intervals

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="container">
         <div class="row"> <!--Row One Swift and Kelce-->
-            <div class="col-12 col-md-4 col-lg-3">
+            <div class="col-12 col-md-4 col-xl-3">
                 <p>
                     <font size="+2"><b>Lorem ipsum dolor sit amet</b></font>
                     <br>
@@ -27,10 +27,10 @@
                     Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique senectus.
                 </p>
             </div>
-            <div class="col-6 col-md-4 col-lg-5">
+            <div class="col-6 col-md-4 col-xl-5">
                 <img src="./assets/img/TaylorSwiftChiefsGame.webp" class="img-fluid" alt="Taylor Swift at KC Chiefs game">
             </div>
-            <div class="col-6 col-md-4 col-lg-4">
+            <div class="col-6 col-md-4 col-xl-4">
                 <img src="./assets/img/TaylorSwiftxTravisKelce.webp" class="img-fluid" alt="Taylor Swift and Travis Kelce">
             </div>
         </div>
@@ -38,7 +38,7 @@
         <br>
 
         <div class="row"> <!--Row Two Swift Speak Now-->
-            <div class="col-12 col-md-4 col-lg-3">
+            <div class="col-12 col-md-4 col-xl-3">
                 <p>
                     <font size="+2"><b>Tempus quam pellentesque</b></font>
                     <br>
@@ -47,10 +47,10 @@
                     tristique senectus et netus et malesuada.
                 </p>
             </div>
-            <div class="col-6 col-md-4 col-lg-5">
+            <div class="col-6 col-md-4 col-xl-5">
                 <img src="./assets/img/SpeakNowTaylorsVersion.webp" class="img-fluid" alt="Speak Now (Taylor's Version) Vinyl">
             </div>
-            <div class="col-6 col-md-4 col-lg-4">
+            <div class="col-6 col-md-4 col-xl-4">
                 <img src="./assets/img/SpeakNowBack.jpg" class="img-fluid" alt="Taylor Swift in Speak Now dress">
             </div>
         </div>
@@ -58,7 +58,7 @@
         <br>
 
         <div class="row"> <!--Row Three Lautner-->
-            <div class="col-12 col-md-4 col-lg-3">
+            <div class="col-12 col-md-4 col-xl-3">
                 <p>
                     <font size="+2"><b>At elementum eu facilisis sed odio</b></font>
                     <br>
@@ -67,10 +67,10 @@
                     tristique nulla aliquet enim. Vitae auctor eu augue ut lectus arcu bibendum at.
                 </p>
             </div>
-            <div class="col-6 col-md-4 col-lg-5">
+            <div class="col-6 col-md-4 col-xl-5">
                 <img src="./assets/img/LautnerxSwift.jpg" class="img-fluid" alt="Taylor Swift and Taylor Lautner">
             </div>
-            <div class="col-6 col-md-4 col-lg-4">
+            <div class="col-6 col-md-4 col-xl-4">
                 <img src="./assets/img/SharkBoy.jpg" class="img-fluid" alt="Taylor Lautner as Shark Boy">
             </div>
         </div>
@@ -78,7 +78,7 @@
         <br>
 
         <div class="row"> <!--Row Four Taylor Series-->
-            <div class="col-12 col-md-4 col-lg-3">
+            <div class="col-12 col-md-4 col-xl-3">
                 <p>
                     <font size="+2"><b>Vitae semper quis lectus nulla</b></font>
                     <br>
@@ -88,10 +88,10 @@
                     Donec enim diam vulputate ut pharetra sit amet aliquam.                
                 </p>
             </div>
-            <div class="col-6 col-md-4 col-lg-5">
+            <div class="col-6 col-md-4 col-xl-5">
                 <img src="./assets/img/TaylorPolynomials.jpg" class="img-fluid" alt="Taylor Polynomials">
             </div>
-            <div class="col-6 col-md-4 col-lg-4">
+            <div class="col-6 col-md-4 col-xl-4">
                 <img src="./assets/img/TaylorSeries.png" class="img-fluid" alt="Taylor Series">
             </div>
         </div>
