--- a/index.html
+++ b/index.html
@@ -12,13 +12,22 @@
 
     <!-- visible content goes here -->
     <h1>The Taylor Times</h1>
-    <hr>
-    <br>
-    <br>
+
 
     <div class="container">
+        <div class="row">
+            <hr>
+            <p class="date">
+                Date: October 2, 2023
+            </p>
+            <p class="name">
+                Author: Patrick Leary
+            </p>
+            <br>
+        </div>
         <div class="row"> <!--Row One Swift and Kelce-->
             <div class="col-12 col-md-4 col-xl-3">
+                <hr>
                 <p>
                     <font size="+2"><b>Lorem ipsum dolor sit amet</b></font>
                     <br>
@@ -28,10 +37,15 @@
                 </p>
             </div>
             <div class="col-6 col-md-4 col-xl-5">
+                <hr>
                 <img src="./assets/img/TaylorSwiftChiefsGame.webp" class="img-fluid" alt="Taylor Swift at KC Chiefs game">
             </div>
             <div class="col-6 col-md-4 col-xl-4">
+                <hr>
                 <img src="./assets/img/TaylorSwiftxTravisKelce.webp" class="img-fluid" alt="Taylor Swift and Travis Kelce">
+                <p>
+                    Eget est lorem ipsum dolor. Magna etiam tempor orci eu. Duis tristique sollicitudin nibh sit.
+                </p>
             </div>
         </div>
         <hr>
@@ -52,6 +66,9 @@
             </div>
             <div class="col-6 col-md-4 col-xl-4">
                 <img src="./assets/img/SpeakNowBack.jpg" class="img-fluid" alt="Taylor Swift in Speak Now dress">
+                <p>
+                    Dui vivamus arcu felis bibendum. Mi eget mauris pharetra et.
+                </p>
             </div>
         </div>
         <hr>
@@ -69,6 +86,9 @@
             </div>
             <div class="col-6 col-md-4 col-xl-5">
                 <img src="./assets/img/LautnerxSwift.jpg" class="img-fluid" alt="Taylor Swift and Taylor Lautner">
+                <p>
+                    Arcu non sodales neque sodales ut etiam sit amet. Pharetra diam sit amet nisl.
+                </p>
             </div>
             <div class="col-6 col-md-4 col-xl-4">
                 <img src="./assets/img/SharkBoy.jpg" class="img-fluid" alt="Taylor Lautner as Shark Boy">
@@ -93,9 +113,18 @@
             </div>
             <div class="col-6 col-md-4 col-xl-4">
                 <img src="./assets/img/TaylorSeries.png" class="img-fluid" alt="Taylor Series">
+                <p>
+                    Risus viverra adipiscing at in tellus integer feugiat. Sed egestas egestas 
+                    fringilla phasellus faucibus scelerisque eleifend donec. Tincidunt augue 
+                    interdum velit euismod in pellentesque.
+                </p>
             </div>
         </div>
         <hr>
+        <hr>
+        <p class="footer">
+            (CC) The Taylor Times
+        </p>
 
     <script src="./assets/js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
