--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 
 
     <div class="container">
+        <hr>
         <div class="row">
-            <hr>
-            <p class="date">
-                Date: October 2, 2023
-            </p>
-            <p class="name">
-                Author: Patrick Leary
-            </p>
-            <br>
+            <div class="col-6 col-md-12 col-xl-12">
+                <p id="date">
+                </p>
+                <p class="name">
+                    Author: Patrick Leary
+                </p>
+            </div>
         </div>
         <div class="row"> <!--Row One Swift and Kelce-->
             <div class="col-12 col-md-4 col-xl-3">
@@ -37,11 +37,15 @@
                 </p>
             </div>
             <div class="col-6 col-md-4 col-xl-5">
-                <hr>
+                <div class="d-none d-md-block">
+                    <hr>
+                </div>
                 <img src="./assets/img/TaylorSwiftChiefsGame.webp" class="img-fluid" alt="Taylor Swift at KC Chiefs game">
             </div>
             <div class="col-6 col-md-4 col-xl-4">
-                <hr>
+                <div class="d-none d-md-block">
+                    <hr>
+                </div>
                 <img src="./assets/img/TaylorSwiftxTravisKelce.webp" class="img-fluid" alt="Taylor Swift and Travis Kelce">
                 <p>
                     Eget est lorem ipsum dolor. Magna etiam tempor orci eu. Duis tristique sollicitudin nibh sit.
