Changed some font sizes

--- a/index.html
+++ b/index.html
@@ -36,13 +36,16 @@
                     Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique senectus.
                 </p>
             </div>
-            <div class="col-6 col-md-4 col-xl-5">
+            <div class="col-12 col-md-4 col-xl-5">
                 <div class="d-none d-md-block">
                     <hr>
                 </div>
                 <img src="./assets/img/TaylorSwiftChiefsGame.webp" class="img-fluid" alt="Taylor Swift at KC Chiefs game">
             </div>
-            <div class="col-6 col-md-4 col-xl-4">
+            <div class="d-md-none">
+                <br>
+            </div>
+            <div class="col-12 col-md-4 col-xl-4">
                 <div class="d-none d-md-block">
                     <hr>
                 </div>
@@ -65,10 +68,13 @@
                     tristique senectus et netus et malesuada.
                 </p>
             </div>
-            <div class="col-6 col-md-4 col-xl-5">
+            <div class="col-12 col-md-4 col-xl-5">
                 <img src="./assets/img/SpeakNowTaylorsVersion.webp" class="img-fluid" alt="Speak Now (Taylor's Version) Vinyl">
             </div>
-            <div class="col-6 col-md-4 col-xl-4">
+            <div class="d-md-none">
+                <br>
+            </div>
+            <div class="col-12 col-md-4 col-xl-4">
                 <img src="./assets/img/SpeakNowBack.jpg" class="img-fluid" alt="Taylor Swift in Speak Now dress">
                 <p>
                     Dui vivamus arcu felis bibendum. Mi eget mauris pharetra et.
@@ -88,13 +94,16 @@
                     tristique nulla aliquet enim. Vitae auctor eu augue ut lectus arcu bibendum at.
                 </p>
             </div>
-            <div class="col-6 col-md-4 col-xl-5">
+            <div class="col-12 col-md-4 col-xl-5">
                 <img src="./assets/img/LautnerxSwift.jpg" class="img-fluid" alt="Taylor Swift and Taylor Lautner">
                 <p>
                     Arcu non sodales neque sodales ut etiam sit amet. Pharetra diam sit amet nisl.
                 </p>
             </div>
-            <div class="col-6 col-md-4 col-xl-4">
+            <div class="d-md-none">
+                <br>
+            </div>
+            <div class="col-12 col-md-4 col-xl-4">
                 <img src="./assets/img/SharkBoy.jpg" class="img-fluid" alt="Taylor Lautner as Shark Boy">
             </div>
         </div>
@@ -112,10 +121,13 @@
                     Donec enim diam vulputate ut pharetra sit amet aliquam.                
                 </p>
             </div>
-            <div class="col-6 col-md-4 col-xl-5">
+            <div class="col-12 col-md-4 col-xl-5">
                 <img src="./assets/img/TaylorPolynomials.jpg" class="img-fluid" alt="Taylor Polynomials">
             </div>
-            <div class="col-6 col-md-4 col-xl-4">
+            <div class="d-md-none">
+                <br>
+            </div>
+            <div class="col-12 col-md-4 col-xl-4">
                 <img src="./assets/img/TaylorSeries.png" class="img-fluid" alt="Taylor Series">
                 <p>
                     Risus viverra adipiscing at in tellus integer feugiat. Sed egestas egestas 
