Changed aspect ratio to 16:9 for all photos

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="d-none d-md-block">
                     <hr>
                 </div>
-                <img src="./assets/img/TaylorSwiftxTravisKelce.webp" class="img-fluid" alt="Taylor Swift and Travis Kelce">
+                <img src="./assets/img/TaylorSwiftxTravisKelce.jpg" class="img-fluid" alt="Taylor Swift and Travis Kelce">
                 <p>
                     Eget est lorem ipsum dolor. Magna etiam tempor orci eu. Duis tristique sollicitudin nibh sit.
                 </p>
@@ -69,7 +69,7 @@
                 </p>
             </div>
             <div class="col-12 col-md-4 col-xl-5">
-                <img src="./assets/img/SpeakNowTaylorsVersion.webp" class="img-fluid" alt="Speak Now (Taylor's Version) Vinyl">
+                <img src="./assets/img/SpeakNowTaylorsVersion.jpg" class="img-fluid" alt="Speak Now (Taylor's Version) Vinyl">
             </div>
             <div class="d-md-none">
                 <br>
